--- a/PowerOfficeCase/PowerOfficeCase.csproj
+++ b/PowerOfficeCase/PowerOfficeCase.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="CsvHelper" Version="30.0.0" />
     <PackageReference Include="MudBlazor" Version="6.0.17" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
