--- a/PowerOfficeCase/PowerOfficeCase.csproj
+++ b/PowerOfficeCase/PowerOfficeCase.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CsvHelper" Version="30.0.0" />
-    <PackageReference Include="MudBlazor" Version="6.0.17" />
-    <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
+    <PackageReference Include="CsvHelper" Version="30.0.1" />
+    <PackageReference Include="MudBlazor" Version="6.1.2" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.1.0-dev-00285" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
